<resources>
    <string name="app_name">Manual Camera</string>
    <string name="action_settings">Settings</string>
    <string name="action_popup">Popup settings</string>
    <string name="intro_ok">OK (This message won\'t show again)</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="choose_save_location">Choose save location:</string>
    <string name="clear_folder_history">Clear folder history</string>
    <string name="clear_folder_history_question">Clear folder history?</string>
    <string name="choose_another_folder">Choose another folder</string>
    <string name="changed_save_location">Changed save location to:</string>
    <string name="stopped_recording_video">Stopped recording video</string>
    <string name="repeats_to_go">repeats to go</string>
    <string name="failed_to_reconnect_camera">Failed to reconnect to camera</string>
    <string name="video_may_be_corrupted">Error, video file may be corrupted</string>
    <string name="not_supported">not supported on your device</string>
    <string name="video_error_unknown">Unknown error, video halted</string>
    <string name="video_error_server_died">Server died, video halted</string>
    <string name="video_max_duration">Video reached max duration</string>
    <string name="video_max_filesize">Video reached max file size</string>
    <string name="exposure_compensation">Exposure compensation</string>
    <string name="fps">FPS</string>
    <string name="focus_distance">Focus distance</string>
    <string name="infinite">Infinite</string>
    <string name="preference_lock_orientation">Lock photo/video orientation</string>
    <string name="preference_lock_orientation_summary">If set, the orientation of the device will be ignored, and the orientation of the photo/video will be with respect to the specified orientation\n%s</string>
    <string name="preference_pause_preview">Pause after taking photo</string>
    <string name="preference_pause_preview_summary">Pause the screen after taking a photo, with the option to share or delete the photo</string>
    <string name="preference_volume_keys">Volume keys</string>
    <string name="preference_audio_control">Audio control options</string>
    <string name="preference_audio_noise_control_sensitivity">Audio control sensitivity</string>
    <string name="preference_audio_noise_control_sensitivity_summary">Noise level sensitivity for audio (loud noise) option</string>
    <string name="preference_using_saf" translatable="false">Storage Access Framework</string>
    <string name="preference_using_saf_summary">Whether to use Storage Access Framework for saving photos and videos. This should be enabled to allow saving to external SD cards. On Android 10+ this option must be enabled if you want to save in a folder outside of DCIM.</string>
    <string name="preference_save_photo_prefix">Save photo prefix</string>
    <string name="preference_save_photo_prefix_summary">The prefix to use for the save filenames for photos</string>
    <string name="preference_save_video_prefix">Save video prefix</string>
    <string name="preference_save_video_prefix_summary">The prefix to use for the save filenames for videos</string>
    <string name="preference_save_zulu_time">Time format for filename</string>
    <string name="preference_save_include_milliseconds">Use milliseconds in filename</string>
    <string name="preference_save_include_milliseconds_summary">If enabled, filenames will include milliseconds</string>
    <string name="preference_show_when_locked">Show camera when locked</string>
    <string name="preference_show_when_locked_summary">If enabled, ManualCamera will still show above any lockscreen (you\'ll still have to unlock to access Settings, Gallery etc)</string>
    <string name="preference_startup_focus">Perform auto-focus on startup</string>
    <string name="preference_startup_focus_summary">Whether to auto-focus when ManualCamera is started. If you have the problem of flash turning on when starting, disable this option</string>
    <string name="preference_show_toasts">Show on-screen messages</string>
    <string name="preference_show_toasts_summary">Whether to display temporary on-screen info messages</string>
    <string name="preference_keep_display_on">Keep display on</string>
    <string name="preference_keep_display_on_summary">If enabled, the screen won\'t switch off while the main ManualCamera UI is active</string>
    <string name="preference_max_brightness">Force maximum brightness</string>
    <string name="preference_max_brightness_summary">Force screen display to be at maximum brightness, rather than device default</string>
    <string name="preference_hdr_save_expo">Save all images for HDR mode</string>
    <string name="preference_hdr_save_expo_summary">If enabled, when using HDR photo mode, the three base exposure images will be saved as well as the final HDR photo. Note this will make saving slower, especially if options like \"Stamp photos\" or Auto-level are also used.</string>
    <string name="preference_category_photo_debugging">Debugging options</string>
    <string name="preference_camera2_fake_flash">Use alternative flash method</string>
    <string name="preference_camera2_fake_flash_summary">Enable this if your device has buggy flash behaviour with Camera2 API</string>
    <string name="preference_nr_save">Noise Reduction original images</string>
    <string name="preference_nr_save_summary">Whether to save original images in noise reduction mode. Note this can make saving photos much slower.\n%s</string>
    <string name="preference_camera2_fast_burst">Enable fast HDR/expo burst</string>
    <string name="preference_camera2_fast_burst_summary">Allows faster capture of the HDR/expo shots. Disable this if your device has problems when taking photos with HDR or Expo photo modes.</string>
    <string name="preference_front_camera_mirror">Front camera mirror</string>
    <string name="preference_front_camera_mirror_summary">Whether to mirror the resultant photos when using the front camera\n%s</string>
    <string name="preference_calibrate_level">Calibrate level angle</string>
    <string name="preference_calibrate_level_summary">This option calibrates your device\'s accelerometer, so the auto-level and on-screen level/angle options work correctly</string>
    <string name="preference_category_exif_tags">Custom EXIF tags</string>
    <string name="preference_exif_artist">Artist</string>
    <string name="preference_exif_artist_summary">Text to store in the image metadata for the "artist" tag  (JPEG formats only). (Leave blank for none.)</string>
    <string name="preference_exif_copyright">Copyright</string>
    <string name="preference_exif_copyright_summary">Text to store in the image metadata for the "copyright" tag  (JPEG formats only). (Leave blank for none.)</string>
    <string name="preference_camera2_photo_video_recording">Allow photos whilst recording video</string>
    <string name="preference_camera2_photo_video_recording_summary">Allows taking photos whilst recording videos. Disable this if there are problems with video recording with Camera2 API enabled on your device.</string>
    <string name="preference_show_whats_new">Shows What\'s New dialog</string>
    <string name="preference_show_whats_new_summary">Whether to display information on new features and improvements when the application has updated</string>
    <string name="preference_hdr_contrast_enhancement">HDR contrast enhancement</string>
    <string name="preference_hdr_contrast_enhancement_summary">When to use a contrast enhancement algorithm for HDR. This can improve the appearance in cases where there is a very high dynamic range in the scene, and also gives a "HDR look" to the results.\n%s</string>
    <string name="preference_screen_remote_control">Bluetooth LE remote control…</string>
    <string name="preference_raw_expo_bracketing">Allow RAW for expo bracketing</string>
    <string name="preference_raw_expo_bracketing_summary">Whether the RAW option should also apply for expo bracketing photo mode (or for HDR mode when \"Save all images for HDR mode\" is enabled). If this option is disabled, only non-DNG (JPEG/etc) images will be saved in those photo modes.</string>
    <string name="preference_raw_focus_bracketing">Allow RAW for focus bracketing</string>
    <string name="preference_raw_focus_bracketing_summary">Whether the RAW option should also apply for focus bracketing photo mode. If this option is disabled, only non-DNG (JPEG/etc) images will be saved in focus bracketing photo modes.</string>
    <string name="preference_panorama_crop">Panorama auto-crop</string>
    <string name="preference_panorama_crop_summary">For panorama mode, whether to remove the wavy boundaries\n%s</string>
    <string name="preference_panorama_save">Panorama original images</string>
    <string name="preference_panorama_save_summary">Whether to save original images in panorama mode. Note this will make saving panorama photos slower. Also allows the option to save an XML file which can be useful reporting problems with panorama.\n%s</string>
    <string name="preference_audio_control_summary">Take photo/video when a noise is detected.
        When enabled, use the on-screen microphone button to start/stop listening.
        \n%s</string>
    <string name="preference_allow_long_press">Allow long press actions</string>
    <string name="preference_allow_long_press_summary">Whether to allow long press actions (e.g., long press on gallery to change save location).</string>
    <string name="preference_camera2_dummy_capture_hack">Enable dummy capture HDR/expo fix</string>
    <string name="preference_camera2_dummy_capture_hack_summary">Try enabling this if your device has problems when taking photos with HDR or Expo photo modes (if expo images come out with same exposures). Only relevant if fast HDR/expo option below is also enabled.</string>
    <string name="preference_hdr_tonemapping">HDR tonemapping</string>
    <string name="preference_hdr_tonemapping_summary">Algorithm to use for tonemapping in HDR photo mode\n%s</string>
    <string name="preference_remove_device_exif">Remove device EXIF data</string>
    <string name="preference_remove_device_exif_summary">Whether to remove device EXIF metadata from JPEG photos. This will not remove exif tags applied by other settings that apply EXIF metadata (e.g. location/geotagging). Those other options are independent and will override this setting. RAW/DNG and videos are not affected.\n%s</string>
    <string name="preference_photo_optimise_focus">Optimise focus for…</string>
    <string name="preference_photo_optimise_focus_summary">When taking photos, whether to optimise for latency or quality. Only relevant when using continuous focus mode. Optimising for quality ensures that the scene is focused, but may result in a delay in taking photos.\n%s</string>
    <string name="preference_save_preshots">Save preview shots</string>
    <string name="preference_save_preshots_summary">When enabled, a short video will be saved alongside each photo, containing shots from the moment before the photo was taken. Not supported for expo, focus bracketing or panorama modes.\n%s</string>
    <string name="preference_allow_haptic_feedback">Allow vibration feedback</string>
    <string name="preference_allow_haptic_feedback_summary">Whether to allow haptic vibration feedback, for example when adjusting some controls. Note this also requires touch interactions to be enabled in your device\'s settings.</string>
    <string name="preference_category_photo_settings">Photo Settings</string>
    <string name="preference_category_on_screen_gui_settings">On Screen GUI Settings</string>
    <string name="pro_version">(PRO version)</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="are_you_sure">Are you sure?</string>
</resources>