<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="preferences_root">

    <PreferenceCategory android:title="@string/preference_category_on_screen_gui_settings">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="preference_show_toasts"
            android:summary="@string/preference_show_toasts_summary"
            android:title="@string/preference_show_toasts" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="preference_show_whats_new"
            android:summary="@string/preference_show_whats_new_summary"
            android:title="@string/preference_show_whats_new" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="preference_keep_display_on"
            android:summary="@string/preference_keep_display_on_summary"
            android:title="@string/preference_keep_display_on" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="preference_max_brightness"
            android:summary="@string/preference_max_brightness_summary"
            android:title="@string/preference_max_brightness" />

    </PreferenceCategory>
</PreferenceScreen>
